[package]
name = "codechain-testmodule"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-basesandbox = { path = "../basesandbox" }
codechain-fml = { path = "../fml" }
fml-macro = { path = "../fml/macro" }
nix = "0.17.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"

[[bin]]
path = "./src/simple.rs"
name = "tm_simple_rs"
